--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <header>
 	   <section id="banner"></section>
 	   <section id="about">
-    <h1>Lore</h1>
+    <center><h1>Lore</h1>
     <p class="text">Shauna Vayne é uma caçadora de monstros mortal e implacável que dedicou sua vida a encontrar e matar o demônio que assassinou sua família. Armada com bestas de pulso e um coração cheio de vingança, Vayne só fica verdadeiramente feliz quando está matando criações ou praticantes das artes obscuras.
     </p>
 	   </section>
-	   <section id="galerry">
-    <h1>Skins</h1>
-    <img src="imagens/1.jpg" class="galeira"/>
+	   <section id="gallery">
+    <center><h1>Skins</h1>
+    <img src="imagens/1.jpg" class="galeria"/>
 	  <img src="imagens/4.jpg" class="galeria">
 		<img src="imagens/12.jpg" class="galeria">
 		<img src="imagens/9.jpg" class="galeria">
